added content to index.htm, added banner and logo images

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,65 @@
     <title>Flexible Boxes Ltd</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./assets/images/logo.png" width="64">
+
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
+
+        <input type="text" value="Search...">
+    </header>
+
+    <figure>
+        <img src="./assets/images/banner.png" id="banner" alt="A banner of lots of cardboard boxes">
+    </figure>
+
+    <section id="services">
+        <div class="service">
+            <h1>Boxes</h1>
+            <img src="./assets/images/boxservice.png">
+            <p>I bet you thought we'd make boxes!</p>
+            <button>More Info</button>
+        </div>
+
+        <div class="service">
+            <h1>Dismantling Boxes</h1>
+            <img src="./assets/images/dismantlingservice.png">
+            <p>You make 'em, we break 'em!</p>
+            <button>More Info</button>
+        </div>
+
+        <div class="service">
+            <h1>Rebuilding boxes</h1>
+            <img src="./assets/images/rebuidlingservice.png">
+            <p>Other people don't want them, so we'll sell them you at a markup!</p>
+            <button>More Info</button>
+        </div>
+    </section>
+
+    <article id="news">
+        <h1>Latest news on boxes</h1>
+        <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
+    </article>
+
+    <aside id="contact">
+        <form>
+            <label for="name">Name: </label>
+            <input type="text" name="name"><br>  
+            <label for="email">Email: </label>
+            <input type="text" name="phone"><br>
+            <label for="phone">Phone: </label>
+            <input type="text" name="email"><br>
+            <button>Get In Touch</button>       
+        </form>
+    </aside>
+
+    <footer>
+        &copy; Fraser Elliott 2025
+    </footer>
 </body>
 </html>
