added additional pages for about, contact and services, moved contact form out of index.htm

--- a/index.htm
+++ b/index.htm
@@ -11,10 +11,10 @@
         <img src="./assets/images/logo.png" width="64">
 
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <a href="./index.htm">Home</a>
+            <a href="./about.htm">About</a>
+            <a href="./services.htm">Services</a>
+            <a href="./contact.htm">Contact</a>
         </nav>
 
         <input type="text" value="Search...">
@@ -25,21 +25,21 @@
     </figure>
 
     <section id="services">
-        <div class="service">
+        <div class="servicepreview">
             <h1>Boxes</h1>
             <img src="./assets/images/boxservice.png">
             <p>I bet you thought we'd make boxes!</p>
             <button>More Info</button>
         </div>
 
-        <div class="service">
+        <div class="servicepreview">
             <h1>Dismantling Boxes</h1>
             <img src="./assets/images/dismantlingservice.png">
             <p>You make 'em, we break 'em!</p>
             <button>More Info</button>
         </div>
 
-        <div class="service">
+        <div class="servicepreview">
             <h1>Rebuilding boxes</h1>
             <img src="./assets/images/rebuidlingservice.png">
             <p>Other people don't want them, so we'll sell them you at a markup!</p>
@@ -51,18 +51,6 @@
         <h1>Latest news on boxes</h1>
         <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
     </article>
-
-    <aside id="contact">
-        <form>
-            <label for="name">Name: </label>
-            <input type="text" name="name"><br>  
-            <label for="email">Email: </label>
-            <input type="text" name="phone"><br>
-            <label for="phone">Phone: </label>
-            <input type="text" name="email"><br>
-            <button>Get In Touch</button>       
-        </form>
-    </aside>
 
     <footer>
         &copy; Fraser Elliott 2025
