corrected grammar in about page

--- a/about.htm
+++ b/about.htm
@@ -26,7 +26,7 @@
 
     <section id="about">
         <h1>About Flexible Boxes Ltd</h1>
-        <p>Here at Flexible Boxes Ltd, we believe strongly in making money. We are a corporate entity whose goal is to make money for our backers and we'll do so with ruthless efficiency.</p>
+        <p>Here at Flexible Boxes Ltd, we strong believe in making money. We are a corporate entity whose goal is to make money for our backers and we'll do so with ruthless efficiency.</p>
     </section>
 
     <footer>
