Added and implemented colour scheme and font scheme

--- a/about.htm
+++ b/about.htm
@@ -17,12 +17,10 @@
             <a href="./contact.htm">Contact</a>
         </nav>
 
-        <input type="text" value="Search...">
+        <input type="text" value="Search..." id="searchbar">
     </header>
 
-    <figure>
-        <img src="./assets/images/banner.png" id="banner" alt="A banner of lots of cardboard boxes">
-    </figure>
+    <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
     <section id="about">
         <h1>About Flexible Boxes Ltd</h1>
