--- a/index.htm
+++ b/index.htm
@@ -17,29 +17,27 @@
             <a href="./contact.htm">Contact</a>
         </nav>
 
-        <input type="text" value="Search...">
+        <input type="text" value="Search..." id="searchbar">
     </header>
 
-    <figure>
-        <img src="./assets/images/banner.png" id="banner" alt="A banner of lots of cardboard boxes">
-    </figure>
+    <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
     <section id="services">
-        <div class="servicepreview">
+        <div class="service">
             <h1>Boxes</h1>
             <img src="./assets/images/boxservice.png">
             <p>I bet you thought we'd make boxes!</p>
             <button>More Info</button>
         </div>
 
-        <div class="servicepreview">
+        <div class="service">
             <h1>Dismantling Boxes</h1>
             <img src="./assets/images/dismantlingservice.png">
             <p>You make 'em, we break 'em!</p>
             <button>More Info</button>
         </div>
 
-        <div class="servicepreview">
+        <div class="service">
             <h1>Rebuilding boxes</h1>
             <img src="./assets/images/rebuidlingservice.png">
             <p>Other people don't want them, so we'll sell them you at a markup!</p>
@@ -47,11 +45,20 @@
         </div>
     </section>
 
-    <article id="news">
-        <h1>Latest news on boxes</h1>
-        <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
-    </article>
+    <section id="newsandcontact">
+        <article id="news">
+            <h1>Latest news on boxes</h1>
+            <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
+        </article>
 
+        <div class="contactbox">
+            <h1>Contact Details:</h1>
+            <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
+            <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
+            Address: 123 Fake Street, Madeupville, AB12 3BC<br>
+            <img src="./assets/images/ourlocation.png">
+        </div>
+    </section>
     <footer>
         &copy; Fraser Elliott 2025
     </footer>
