--- a/contact.htm
+++ b/contact.htm
@@ -17,22 +17,26 @@
             <a href="./contact.htm">Contact</a>
         </nav>
 
-        <input type="text" value="Search...">
+        <input type="text" value="Search..." id="searchbar">
     </header>
 
-    <figure>
-        <img src="./assets/images/banner.png" id="banner" alt="A banner of lots of cardboard boxes">
-    </figure>
+    <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
     <section id="contact">
         <div class="contactbox">
             <form>
-                <label for="name">Name: </label>
-                <input type="text" name="name"><br>  
-                <label for="email">Email: </label>
-                <input type="text" name="phone"><br>
-                <label for="phone">Phone: </label>
-                <input type="text" name="email"><br>
+                <div class="formgroup">
+                    <label for="name">Name: </label>
+                    <input type="text" name="name">
+                </div>
+                <div class="formgroup">
+                    <label for="email">Email: </label>
+                    <input type="text" name="phone">
+                </div>
+                <div class="formgroup">
+                    <label for="phone">Phone: </label>
+                    <input type="text" name="email"><br>
+                </div>
                 <button>Get In Touch</button>       
             </form>
         </div>
