moved labels in contact form to separate lines

--- a/contact.htm
+++ b/contact.htm
@@ -26,15 +26,15 @@
         <div class="contactbox">
             <form>
                 <div class="formgroup">
-                    <label for="name">Name: </label>
+                    <label for="name">Name: </label><br>
                     <input type="text" name="name">
                 </div>
                 <div class="formgroup">
-                    <label for="email" class="emaillabel">Email: </label>
+                    <label for="email" class="emaillabel">Email: </label><br>
                     <input type="text" name="phone">
                 </div>
                 <div class="formgroup">
-                    <label for="phone" class="phonelabel">Phone: </label>
+                    <label for="phone" class="phonelabel">Phone: </label><br>
                     <input type="text" name="email"><br>
                 </div>
                 <button>Get In Touch</button>       
