--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/images/logo.png" width="64">
+        <img src="./assets/images/logo.png" width="64" id="logo">
 
         <nav>
             <a href="./index.htm">Home</a>
