made boxes on services page left-aligned with a centered button

--- a/index.htm
+++ b/index.htm
@@ -23,21 +23,21 @@
     <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
     <section id="services">
-        <div class="service">
+        <div class="servicepreview">
             <h1>Boxes</h1>
             <img src="./assets/images/boxservice.png">
             <p>I bet you thought we'd make boxes!</p>
             <button>More Info</button>
         </div>
 
-        <div class="service">
+        <div class="servicepreview">
             <h1>Dismantling Boxes</h1>
             <img src="./assets/images/dismantlingservice.png">
             <p>You make 'em, we break 'em!</p>
             <button>More Info</button>
         </div>
 
-        <div class="service">
+        <div class="servicepreview">
             <h1>Rebuilding boxes</h1>
             <img src="./assets/images/rebuidlingservice.png">
             <p>Other people don't want them, so we'll sell them you at a markup!</p>
