--- a/services.htm
+++ b/services.htm
@@ -26,7 +26,7 @@
         <div class="service">
             <h1>Boxes</h1>
             <img src="./assets/images/boxservice.png">
-            <p>I bet you thought we'd make boxes! Well we do! You can buy loads of types of boxes from us:</p>
+            <p>I bet you thought we'd make boxes! Well we do! You can buy loads of types of boxes from us including:</p>
             <ul>
                 <li>A cardboard box</li>
                 <li>A slightly differently sized cardboard box</li>
