fixed grammar and added extra newline to about.htm

--- a/about.htm
+++ b/about.htm
@@ -23,8 +23,8 @@
     <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
     <section id="about">
-        <h1>About Flexible Boxes Ltd</h1>
-        <p>Here at Flexible Boxes Ltd, we strong believe in making money. We are a corporate entity whose goal is to make money for our backers and we'll do so with ruthless efficiency.</p>
+        <h1>About Flexible Boxes Ltd</h1><br>
+        <p>Here at Flexible Boxes Ltd, we strongly believe in making money. We are a corporate entity whose goal is to make money for our backers and we'll do so with ruthless efficiency.</p>
     </section>
 
     <footer>
