removed unncessary styling for #news h1

--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
 
     <section id="newsandcontact">
         <article id="news">
-            <h1>Latest news on boxes</h1>
+            <h1>Latest news on boxes</h1><br>
             <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
         </article>
 
