Added remaining images. Set maximum width on panels that appear side by side.

--- a/about.htm
+++ b/about.htm
@@ -10,6 +10,8 @@
     <header>
         <img src="./assets/images/logo.png" width="64">
 
+        <h1>Flexible Boxes Ltd</h1>
+
         <nav>
             <a href="./index.htm">Home</a>
             <a href="./about.htm">About</a>
