--- a/contact.htm
+++ b/contact.htm
@@ -10,6 +10,8 @@
     <header>
         <img src="./assets/images/logo.png" width="64">
 
+        <h1>Flexible Boxes Ltd</h1>
+
         <nav>
             <a href="./index.htm">Home</a>
             <a href="./about.htm">About</a>
@@ -23,19 +25,23 @@
     <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
     <section id="contact">
-        <div class="contactbox">
+        <div class="contactbox" id="contactform">
             <form>
                 <div class="formgroup">
-                    <label for="name">Name: </label><br>
+                    <label for="name">Name:</label><br>
                     <input type="text" name="name">
                 </div>
                 <div class="formgroup">
-                    <label for="email" class="emaillabel">Email: </label><br>
+                    <label for="email" class="emaillabel">Email:</label><br>
                     <input type="text" name="phone">
                 </div>
                 <div class="formgroup">
-                    <label for="phone" class="phonelabel">Phone: </label><br>
+                    <label for="phone" class="phonelabel">Phone:</label><br>
                     <input type="text" name="email"><br>
+                </div>
+                <div class="formgroup">
+                    <label for="message">Message:</label><br>
+                    <textarea rows="5"></textarea>
                 </div>
                 <button>Get In Touch</button>       
             </form>
@@ -46,7 +52,7 @@
             <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
             <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
             Address: 123 Fake Street, Madeupville, AB12 3BC<br>
-            <img src="./assets/images/ourlocation.png">
+            <img src="./assets/images/ourlocation.png" width="300">
         </div>
     </section>
 
