--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,8 @@
     <header>
         <img src="./assets/images/logo.png" width="64" id="logo">
 
+        <h1>Flexible Boxes Ltd</h1>
+
         <nav>
             <a href="./index.htm">Home</a>
             <a href="./about.htm">About</a>
@@ -25,23 +27,23 @@
     <section id="services">
         <div class="servicepreview">
             <h1>Boxes</h1>
-            <img src="./assets/images/boxservice.png">
+            <img src="./assets/images/boxservice.png" width="300">
             <p>I bet you thought we'd make boxes!</p>
-            <button>More Info</button>
+            <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
 
         <div class="servicepreview">
             <h1>Dismantling Boxes</h1>
-            <img src="./assets/images/dismantlingservice.png">
+            <img src="./assets/images/dismantlingservice.png" width="300">
             <p>You make 'em, we break 'em!</p>
-            <button>More Info</button>
+            <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
 
         <div class="servicepreview">
             <h1>Rebuilding boxes</h1>
-            <img src="./assets/images/rebuidlingservice.png">
+            <img src="./assets/images/rebuildingservice.png" width="300">
             <p>Other people don't want them, so we'll sell them you at a markup!</p>
-            <button>More Info</button>
+            <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
     </section>
 
@@ -49,6 +51,7 @@
         <article id="news">
             <h1>Latest news on boxes</h1><br>
             <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
+            <img src="./assets/images/shrug.png" width="300">
         </article>
 
         <div class="contactbox">
@@ -56,7 +59,7 @@
             <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
             <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
             Address: 123 Fake Street, Madeupville, AB12 3BC<br>
-            <img src="./assets/images/ourlocation.png">
+            <img src="./assets/images/ourlocation.png" width="300">
         </div>
     </section>
     <footer>
