--- a/services.htm
+++ b/services.htm
@@ -10,6 +10,8 @@
     <header>
         <img src="./assets/images/logo.png" width="64">
 
+        <h1>Flexible Boxes Ltd</h1>
+
         <nav>
             <a href="./index.htm">Home</a>
             <a href="./about.htm">About</a>
@@ -25,19 +27,19 @@
     <section id="services">
         <div class="service">
             <h1>Boxes</h1>
-            <img src="./assets/images/boxservice.png">
+            <img src="./assets/images/boxservice.png" width="300">
             <p>I bet you thought we'd make boxes! Well we do! You can buy loads of types of boxes from us including:</p>
             <ul>
                 <li>A cardboard box</li>
                 <li>A slightly differently sized cardboard box</li>
                 <li>A cardboard box you thought was big enough for your dining set but isn't</li>
             </ul>
-            <button>Order</button>
+            <button class="button">Order</button>
         </div>
 
         <div class="service">
             <h1>Dismantling Boxes</h1>
-            <img src="./assets/images/dismantlingservice.png">
+            <img src="./assets/images/dismantlingservice.png" width="300">
             <p>You make 'em, we break 'em! Give us your boxes and we'll tear them apart and sell them to someone else at only a slightly unreasonable fee! Use this service to:
                 <ul>
                     <li>Help us make money</li>
@@ -45,19 +47,19 @@
                     <li>Not contribute to landfill</li>
                 </ul>
             </p>
-            <button>Order</button>
+            <button class="button">Order</button>
         </div>
 
         <div class="service">
             <h1>Rebuilding boxes</h1>
-            <img src="./assets/images/rebuidlingservice.png">
+            <img src="./assets/images/rebuildingservice.png" width="300">
             <p>Other people don't want them, so we'll sell them you at a markup! Our rebuilt boxes come at a 25% discount and we can guarantee:</p>
             <ul>
                     <li>Minimum soiling</li>
                     <li>Maximum of 5cm tear per side</li>
                     <li>Free delivery - we'll deliver your smaller boxes inside the largest one</li>
                 </ul>
-            <button>Order</button>
+            <button class="button">Order</button>
         </div>
     </section>
 
