corrected grammar in service description

--- a/services.htm
+++ b/services.htm
@@ -56,7 +56,7 @@
             <p>Other people don't want them, so we'll sell them you at a markup! Our rebuilt boxes come at a 25% discount and we can guarantee:</p>
             <ul>
                     <li>Minimum soiling</li>
-                    <li>Maximum of 5cm tear per side</li>
+                    <li>Maximum 5cm tear per side</li>
                     <li>Free delivery - we'll deliver your smaller boxes inside the largest one</li>
                 </ul>
             <button class="button">Order</button>
