added alt to images

--- a/index.htm
+++ b/index.htm
@@ -27,21 +27,21 @@
     <section id="services">
         <div class="servicepreview">
             <h1>Boxes</h1>
-            <img src="./assets/images/boxservice.png" width="300">
+            <img src="./assets/images/boxservice.png" alt="A cardboard box" width="300">
             <p>I bet you thought we'd make boxes!</p>
             <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
 
         <div class="servicepreview">
             <h1>Dismantling Boxes</h1>
-            <img src="./assets/images/dismantlingservice.png" width="300">
+            <img src="./assets/images/dismantlingservice.png" alt="A pile of cardboard" width="300">
             <p>You make 'em, we break 'em!</p>
             <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
 
         <div class="servicepreview">
             <h1>Rebuilding boxes</h1>
-            <img src="./assets/images/rebuildingservice.png" width="300">
+            <img src="./assets/images/rebuildingservice.png" alt="A cardboard box" width="300">
             <p>Other people don't want them, so we'll sell them you at a markup!</p>
             <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
@@ -51,7 +51,7 @@
         <article id="news">
             <h1>Latest news on boxes</h1><br>
             <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
-            <img src="./assets/images/shrug.png" width="300">
+            <img src="./assets/images/shrug.png" alt="A man shrugging in front of cardboard" width="300">
         </article>
 
         <div class="contactbox">
@@ -59,7 +59,7 @@
             <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
             <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
             Address: 123 Fake Street, Madeupville, AB12 3BC<br>
-            <img src="./assets/images/ourlocation.png" width="300">
+            <img src="./assets/images/ourlocation.png" alt="Our location on a map" width="300">
         </div>
     </section>
     <footer>
