--- a/contact.htm
+++ b/contact.htm
@@ -52,7 +52,7 @@
             <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
             <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
             Address: 123 Fake Street, Madeupville, AB12 3BC<br>
-            <img src="./assets/images/ourlocation.png" width="300">
+            <img src="./assets/images/ourlocation.png" alt="Our location on a map" width="300">
         </div>
     </section>
 
