--- a/services.htm
+++ b/services.htm
@@ -27,7 +27,7 @@
     <section id="services">
         <div class="service">
             <h1>Boxes</h1>
-            <img src="./assets/images/boxservice.png" width="300">
+            <img src="./assets/images/boxservice.png" alt="A cardboard box" width="300">
             <p>I bet you thought we'd make boxes! Well we do! You can buy loads of types of boxes from us including:</p>
             <ul>
                 <li>A cardboard box</li>
@@ -39,7 +39,7 @@
 
         <div class="service">
             <h1>Dismantling Boxes</h1>
-            <img src="./assets/images/dismantlingservice.png" width="300">
+            <img src="./assets/images/dismantlingservice.png" alt="A pile of cardboard" width="300">
             <p>You make 'em, we break 'em! Give us your boxes and we'll tear them apart and sell them to someone else at only a slightly unreasonable fee! Use this service to:
                 <ul>
                     <li>Help us make money</li>
@@ -52,7 +52,7 @@
 
         <div class="service">
             <h1>Rebuilding boxes</h1>
-            <img src="./assets/images/rebuildingservice.png" width="300">
+            <img src="./assets/images/rebuildingservice.png" alt="A man shrugging in front of cardboard" width="300">
             <p>Other people don't want them, so we'll sell them you at a markup! Our rebuilt boxes come at a 25% discount and we can guarantee:</p>
             <ul>
                     <li>Minimum soiling</li>
