refactored a lot of similar styling into fewer classes. refactored margin and padding for panels to variables. updated media query to update panel spacing and box-shadow.

--- a/about.htm
+++ b/about.htm
@@ -24,7 +24,7 @@
 
     <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
-    <section id="about">
+    <section id="about" class="panel">
         <h1>About Flexible Boxes Ltd</h1><br>
         <p>Here at Flexible Boxes Ltd, we strongly believe in making money. We are a corporate entity whose goal is to make money for our backers and we'll do so with ruthless efficiency.</p>
     </section>
