--- a/contact.htm
+++ b/contact.htm
@@ -24,30 +24,33 @@
 
     <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
-    <section id="contact">
-        <div class="contactbox" id="contactform">
-            <form>
-                <div class="formgroup">
-                    <label for="name">Name:</label><br>
-                    <input type="text" name="name">
-                </div>
-                <div class="formgroup">
-                    <label for="email" class="emaillabel">Email:</label><br>
-                    <input type="text" name="phone">
-                </div>
-                <div class="formgroup">
-                    <label for="phone" class="phonelabel">Phone:</label><br>
-                    <input type="text" name="email"><br>
-                </div>
-                <div class="formgroup">
-                    <label for="message">Message:</label><br>
-                    <textarea rows="5"></textarea>
-                </div>
-                <button>Get In Touch</button>       
-            </form>
+    <section id="contact" class="wrappingcontainer">
+        <div class="contactbox panel centeredtext">
+            <h1>Contact Us</h1>
+            <div id="contactform">
+                <form>
+                    <div class="formgroup">
+                        <label for="name">Name:</label><br>
+                        <input type="text" name="name">
+                    </div>
+                    <div class="formgroup">
+                        <label for="email" class="emaillabel">Email:</label><br>
+                        <input type="text" name="phone">
+                    </div>
+                    <div class="formgroup">
+                        <label for="phone" class="phonelabel">Phone:</label><br>
+                        <input type="text" name="email"><br>
+                    </div>
+                    <div class="formgroup">
+                        <label for="message">Message:</label><br>
+                        <textarea rows="5"></textarea>
+                    </div>
+                    <button>Get In Touch</button>       
+                </form>
+            </div>
         </div>
 
-        <div class="contactbox">
+        <div class="panel centeredtext">
             <h1>Contact Details:</h1>
             <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
             <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
