--- a/index.htm
+++ b/index.htm
@@ -24,22 +24,22 @@
 
     <figure id="banner" alt="A banner of lots of cardboard boxes"></figure>
 
-    <section id="services">
-        <div class="servicepreview">
+    <section id="services" class="wrappingcontainer">
+        <div class="panel centeredtext">
             <h1>Boxes</h1>
             <img src="./assets/images/boxservice.png" alt="A cardboard box" width="300">
             <p>I bet you thought we'd make boxes!</p>
             <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
 
-        <div class="servicepreview">
+        <div class="panel centeredtext">
             <h1>Dismantling Boxes</h1>
             <img src="./assets/images/dismantlingservice.png" alt="A pile of cardboard" width="300">
             <p>You make 'em, we break 'em!</p>
             <form action="./services.htm"><input type="submit" class="button" value="More Info"></form>
         </div>
 
-        <div class="servicepreview">
+        <div class="panel centeredtext">
             <h1>Rebuilding boxes</h1>
             <img src="./assets/images/rebuildingservice.png" alt="A cardboard box" width="300">
             <p>Other people don't want them, so we'll sell them you at a markup!</p>
@@ -47,14 +47,14 @@
         </div>
     </section>
 
-    <section id="newsandcontact">
-        <article id="news">
+    <section id="newsandcontact" class="wrappingcontainer">
+        <article class="panel centeredtext">
             <h1>Latest news on boxes</h1><br>
             <p>I'm not sure what kind of website you're thinking of; we just make boxes here.</p>
             <img src="./assets/images/shrug.png" alt="A man shrugging in front of cardboard" width="300">
         </article>
 
-        <div class="contactbox">
+        <div class="panel centeredtext">
             <h1>Contact Details:</h1>
             <span class="phonelabel">Phone:</span> <a href="tel:0123456789">0123456789</a><br>
             <span class="emaillabel">Email:</span> <a href="mailto:info@flexibleboxesltd.com">info@flexibleboxesltd.com</a><br>
