updated about text

--- a/about.htm
+++ b/about.htm
@@ -26,7 +26,7 @@
 
     <section id="about" class="panel">
         <h1>About Flexible Boxes Ltd</h1><br>
-        <p>Here at Flexible Boxes Ltd, we strongly believe in making money. We are a corporate entity whose goal is to make money for our backers and we'll do so with ruthless efficiency.</p>
+        <p>Here at Flexible Boxes Ltd, we strongly believe in making money. Thank you for helping us to achieve our vision.</p>
     </section>
 
     <footer>
