corrected input types for contact form

--- a/contact.htm
+++ b/contact.htm
@@ -34,12 +34,12 @@
                         <input type="text" name="name">
                     </div>
                     <div class="formgroup">
-                        <label for="email" class="emaillabel">Email:</label><br>
-                        <input type="text" name="phone">
+                        <label for="email" class="emaillabel" >Email:</label><br>
+                        <input type="email" name="phone">
                     </div>
                     <div class="formgroup">
                         <label for="phone" class="phonelabel">Phone:</label><br>
-                        <input type="text" name="email"><br>
+                        <input type="tel" name="email"><br>
                     </div>
                     <div class="formgroup">
                         <label for="message">Message:</label><br>
