fixed labels on contact form to work correctly

--- a/contact.htm
+++ b/contact.htm
@@ -31,19 +31,19 @@
                 <form>
                     <div class="formgroup">
                         <label for="name">Name:</label><br>
-                        <input type="text" name="name">
+                        <input type="text" id="name">
                     </div>
                     <div class="formgroup">
                         <label for="email" class="emaillabel" >Email:</label><br>
-                        <input type="email" name="phone">
+                        <input type="email" id="email">
                     </div>
                     <div class="formgroup">
                         <label for="phone" class="phonelabel">Phone:</label><br>
-                        <input type="tel" name="email"><br>
+                        <input type="tel" id="phone"><br>
                     </div>
                     <div class="formgroup">
                         <label for="message">Message:</label><br>
-                        <textarea rows="5"></textarea>
+                        <textarea rows="5" id="message"></textarea>
                     </div>
                     <button>Get In Touch</button>       
                 </form>
